# technopark_hw

./: .gitattributes  .gitignore  .travis.yml  .traviss.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/console_communication/: CMakeLists.txt
lib/console_communication/include/: console_communication.h
lib/console_communication/src/: console_communication.c
lib/errors/include/: errors.h
lib/file_utils/: CMakeLists.txt
lib/file_utils/include/: file_utils.h  file_utils_parallel.h
lib/file_utils/src/: file_common.c  file_communication.c  file_utilc_parallel.c  file_utils_consistent.c
lib/test/: CMakeLists.txt
lib/test/src/: stress_test_dynamic.c  stress_test_static.c  stress_tests_controller.c  test.cpp  unit_tests_consistent.cpp  unit_tests_parallel.cpp
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/utils/: quick_sort.c  quick_sort.h
src/lib/waybill_manager/: manager.c  manager.h  product_struct.h  quick_sort_wb.c  quick_sort_wb.h
src/prog/: CMakeLists.txt  main.c
src/test/: CMakeLists.txt  test.cpp
